--- a/src/Component/Dashboard.css
+++ b/src/Component/Dashboard.css
@@ -3,7 +3,7 @@
     position: fixed;
     top: 0;
     left: -300px;
-    width: 260px;
+    width: 200px;
     height: 100%;
     background-color: #11101d;
     z-index: 999;
@@ -140,7 +140,8 @@
   ----------------------------------------------------- */
   
   .damroo {
-      margin-left: 30px;
+      margin-left: 100px;
+      
   }
   
   #content {
@@ -149,6 +150,7 @@
       min-height: 100vh;
       transition: all 0.3s;
       position: absolute;
+      margin-left: -200px;
   }
   
   #content.active {
@@ -568,7 +570,7 @@
       background: #E4E9F7;
       height: 100vh;
       width: calc(100% - 260px);
-      left: 340px;
+      left: 200px;
       transition: all 0.5s ease;
   }
   
@@ -590,7 +592,8 @@
   }
   .home-content{
     background-color: black;
-    width:100%;
+    width:113%;
+    height:7.2vh;
     
   }
   .home-section .home-content .bx-menu{
@@ -608,9 +611,9 @@
   }
   
   .home-section {
-      height: 70px;
-      width:80%;
-      background: #262626;
+    background-color: black;
+    width:113%;
+    height:7.2vh;
   }
   
   .brand {
@@ -806,8 +809,19 @@
         width:200%;
         background: #262626;
     }
-      .frequency{
-         margin-left: 200px;   
+      
+      .frequencydata-box{
+        display:flex;
+        align-items: center;
+        justify-content: center;
       }
+      .home-section {
+        background-color: black;
+        width:113%;
+        height:7.2vh;
+      }
+      #content {
+        margin-left: 100px;
+    }
       
   }
