--- a/src/Component/Dashboard.css
+++ b/src/Component/Dashboard.css
@@ -547,6 +547,9 @@
       .grand_parent {
           height: auto;
       }
+      #content {
+        margin-left: 100px;
+    }
   }
 
 
@@ -739,12 +742,21 @@
           max-height: 60px;
           margin-top: 5px;
       }
+      #content {
+        margin-left: 100px;
+    }
   }
   
   @media screen and (min-width: 799px) {
       .nav-list {
           display: block !important;
       }
+     
+  }
+  @media only screen and (max-width: 1800px) {
+    #content {
+        margin-left: 100px;
+    }
   }
   
   #nav-toggle {
